[gd_scene load_steps=2 format=3 uid="uid://bp2rvoklrxmbv"]

[ext_resource type="Script" uid="uid://cuwa4me7hkelb" path="res://script/scene/title.gd" id="1_4fdtc"]

[node name="Title" type="Node2D"]
script = ExtResource("1_4fdtc")

[node name="ButtonStart" type="ColorRect" parent="."]
offset_left = 160.0
offset_top = 160.0
offset_right = 1120.0
offset_bottom = 240.0

[node name="ButtonErase" type="ColorRect" parent="."]
offset_left = 160.0
offset_top = 240.0
offset_right = 1120.0
offset_bottom = 320.0
color = Color(1, 1, 0, 1)

[node name="ButtonCollection" type="ColorRect" parent="."]
offset_left = 160.0
offset_top = 320.0
offset_right = 1120.0
offset_bottom = 400.0

[node name="ButtonQuit" type="ColorRect" parent="."]
offset_left = 160.0
offset_top = 400.0
offset_right = 1120.0
offset_bottom = 480.0
color = Color(1, 1, 0, 1)

[connection signal="gui_input" from="ButtonStart" to="." method="_on_button_start_gui_input"]
[connection signal="gui_input" from="ButtonErase" to="." method="_on_button_erase_gui_input"]
[connection signal="gui_input" from="ButtonCollection" to="." method="_on_button_collection_gui_input"]
[connection signal="gui_input" from="ButtonQuit" to="." method="_on_button_quit_gui_input"]
